objects/HealthCloudGA__RiskScoreInteraction__mdt.object
<CustomObject>
    <description>Lookup table with information about disease interaction scores.</description>
    <fields>
        <fullName>HealthCloudGA__ApplyIfDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether condition interacts with being disabled.</description>
        <inlineHelpText>True when this additive score is applied if the patient is disabled and has additional conditions.</inlineHelpText>
        <label>Apply If Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityFBDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community FBDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityFBDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community FBDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityNonDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community NonDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityNonDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community NonDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityPBDualAged__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community PBDual Aged</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CommunityPBDualDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community PBDual Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Community__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Community</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__HasConditions__c</fullName>
        <label>Has Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Institutional__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Institutional</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__InteractingConditions__c</fullName>
        <label>Has Interacting Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this record should be used.</description>
        <inlineHelpText>Whether this record should be used.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__YearSpan__c</fullName>
        <label>Year Span</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Risk Score Disease Interaction</label>
    <pluralLabel>Risk Score Disease Interactions</pluralLabel>
</CustomObject>